# PyCartool

./: .flake8  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  azure-pipelines.yml  codecov.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  code-style.yml  publish.yml
docs/: references.bib
docs/source/: conf.py  index.rst  install.rst  modules.rst  pycartool.io.rst  pycartool.regions_of_interest.rst  pycartool.rst  pycartool.source_estimate.rst  pycartool.source_space.rst  pycartool.tests.rst  pycartool.tutorials.rst
docs/source/api/: index.rst  io.rst  regions_of_interests.rst  source_estimate.rst  source_space.rst
docs/source/auto_tutorials/: index.rst  plot_svd.ipynb  plot_svd.py.md5  plot_svd.rst  plot_svd_codeobj.pickle  searchindex.bak  sg_execution_times.rst
docs/source/tutorials/svd/: MNI152.NlinAsym09c.204.5000.2017.spi  svd.ipynb
pycartool/: __init__.py  __main__.py  _version.py  regions_of_interest.py  setup.py  source_estimate.py  source_space.py
pycartool/data/: EGI257.GenevaAverage13.10-10.xyz  __init__.py  sample_test_roi.rois  sample_test_spi.spi  sample_test_write_spi.spi
pycartool/inv/: __init__.py  inv.py
pycartool/io/: __init__.py  inverse_solution.py  leadfield.py  montage.py  roi.py  sef.py  source_space.py
pycartool/lf/: __init__.py  leadfield.py
pycartool/ris/: __init__.py  source_estimate.py
pycartool/ris/tests/: test_source_estimate.py
pycartool/rois/: __init__.py  regions_of_interest.py
pycartool/rois/tests/: test_regions_of_interest.py
pycartool/sef/: __init__.py  sef.py
pycartool/sef/tests/: test_sef.py
pycartool/spi/: __init__.py  source_space.py
pycartool/spi/tests/: test_source_space.py
pycartool/tests/: test_inverse_solution.py  test_montage.py  test_regions_of_interest.py  test_roi.py  test_sef.py  test_source_estimate.py  test_source_space.py  test_spi.py
pycartool/tests/data/: Cartool.ini  EGI257.GenevaAverage13.10-10.xyz
pycartool/utils/: _docs.py  compute.py
pycartool/xyz/: __init__.py  xyz.py
pycartool/xyz/tests/: test_xyz.py
tutorials/: MNI152.NlinAsym09c.204.5000.2017.AAL.rois  plot_svd.py
